# research-camp-5

./: .gitignore  50-youbot-devices.rules  README.md  repository.rosinstall
doc/: FIND_OBJECT.txt  datta_action_model.txt  get_obj_poses_for_configuration.txt  select_pose_to_approach.txt  template.txt
raw_command_tools/: stack.xml
raw_command_tools/raw_script_server/src/: script_server.py  simple_script_server.py
raw_command_tools/raw_teleop/: manifest.xml
raw_common/: stack.xml
raw_common/raw_msgs/: manifest.xml
raw_common/raw_msgs/msg/: Object.msg
raw_common/raw_robot_description/: mainpage.dox  manifest.xml
raw_config/: mainpage.dox  manifest.xml
raw_config/cfg/cob3-3/: missing.yaml
raw_config/cfg/generic/: generic.yaml
raw_config/cfg/youbot/: missing.yaml
raw_config/launch/: push_config.launch
raw_environments/raw_default_env_config/brics-rc5/: command_gui_buttons.yaml  navigation_goals.yaml
raw_environments/raw_default_env_config/rc5-cob/: command_gui_buttons.yaml  navigation_goals.yaml
raw_environments/raw_default_env_config/rc5-sim/: map.pgm  simulation_object_locations.yaml
raw_manipulation/: stack.xml
raw_manipulation/raw_arm_navigation/: manifest.xml
raw_navigation/: stack.xml
raw_navigation/raw_2dnav/: CMakeLists.txt  manifest.xml
raw_navigation/raw_2dnav/ros/: README
raw_navigation/raw_base_placement/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
raw_navigation/raw_base_placement/common/include/placement_wrt_workspace/: LaserScanLinearRegression.h
raw_navigation/raw_base_placement/common/src/placement_wrt_platform/: LaserScanLinearRegression.cpp
raw_navigation/raw_base_placement/common/src/placement_wrt_workspace/: LaserScanLinearRegression.cpp
raw_navigation/raw_base_placement/ros/include/placement_wrt_platform/: LaserScanLinearRegressionUtil.h
raw_navigation/raw_base_placement/ros/launch/: placement_wrt_platform.launch  placement_wrt_workspace.launch  placement_wrt_workspace_cob3-3.launch  placement_wrt_workspace_youbot.launch
raw_navigation/raw_base_placement/ros/nodes/: placement_wrt_platform_action_server.cpp  placement_wrt_platform_service_server.cpp  placement_wrt_workspace_action_server.cpp
raw_navigation/raw_base_placement/ros/src/placement_wrt_platform/: LaserScanLinearRegressionUtil.cpp
raw_navigation/raw_base_placement/ros/src/placement_wrt_platform/test/: basescan_orientation_example.cpp
raw_navigation/raw_base_placement/ros/src/placement_wrt_workspace/test/: basescan_orientation_example.cpp
raw_object_perception/: stack.xml
raw_object_perception/raw_object_finder/: .cproject  .gitignore  .project  CMakeLists.txt  manifest.xml
raw_robots/: stack.xml
raw_robots/raw_bringup/: manifest.xml
raw_robots/raw_hardware_config/: manifest.xml
raw_scenarios/: stack.xml
raw_scenarios/raw_fetch_and_carry/: manifest.xml
raw_scenarios/raw_generic_states/: manifest.xml
raw_simulation/: stack.xml
raw_simulation/raw_bringup_sim/: manifest.xml
raw_simulation/raw_gazebo_worlds/: manifest.xml
raw_utwente_motion_stack/: .gitignore  stack.xml
raw_utwente_motion_stack/raw_arm_bridge_ros_orocos/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_utwente_motion_stack/raw_arm_bridge_ros_orocos/common/include/: JointTrajectory.hpp  JointTrajectoryController.hpp
raw_utwente_motion_stack/raw_arm_bridge_ros_orocos/common/src/: JointTrajectoryController.cpp
raw_utwente_motion_stack/raw_arm_bridge_ros_orocos/orocos/deploy/: arm_bridge.ops
raw_utwente_motion_stack/raw_arm_bridge_ros_orocos/orocos/include/: arm_bridge_ros_orocos.hpp
raw_utwente_motion_stack/raw_arm_bridge_ros_orocos/orocos/src/: arm_bridge_ros_orocos.cpp
raw_utwente_motion_stack/raw_utwente_launch/: CMakeLists.txt  mainpage.dox  manifest.xml
task_coordination/: stack.xml
task_coordination/action_cmdr/: CMakeLists.txt  manifest.xml
task_coordination/cob_actions/: manifest.xml
task_coordination/generic_actions/: manifest.xml
task_coordination/script_server/: mainpage.dox  manifest.xml
task_coordination/script_server_cob_utils/: CMakeLists.txt  manifest.xml
task_coordination/script_server_core/: mainpage.dox  manifest.xml
task_coordination/script_server_generic/: mainpage.dox
task_coordination/script_server_youbot_util/: manifest.xml
task_coordination/youbot_actions/: mainpage.dox  manifest.xml
(+109 files in other folders)
